--- a/foldl.cabal
+++ b/foldl.cabal
@@ -19,6 +19,7 @@ Source-Repository head
     Location: https://github.com/Gabriel439/Haskell-Foldl-Library
 
 Library
+    HS-Source-Dirs: src
     Build-Depends: base >= 4 && < 5
     Exposed-Modules: Control.Foldl
     GHC-Options: -O2 -Wall
