--- a/foldl.cabal
+++ b/foldl.cabal
@@ -11,7 +11,7 @@ Bug-Reports: https://github.com/Gabriel439/Haskell-Fold-Library/issues
 Synopsis: Composable, streaming, and efficient left folds
 Description: This library provides strict left folds that stream in constant
   memory, and you can combine folds using @Applicative@ style to derive new
-  folds.  Derived folds still traverse the container just once and are as
+  folds.  Derived folds still traverse the container just once and are often as
   efficient as hand-written folds.
 Category: Control
 Source-Repository head
