--- a/foldl.cabal
+++ b/foldl.cabal
@@ -23,7 +23,9 @@ Library
     Build-Depends:
         base       >= 4        && < 5   ,
         bytestring >= 0.9.2.1  && < 0.11,
-        text       >= 0.11.2.0 && < 1.1
+        primitive                 < 0.6 ,
+        text       >= 0.11.2.0 && < 1.1 ,
+        vector     >= 0.7      && < 0.11
     Exposed-Modules:
         Control.Foldl,
         Control.Foldl.ByteString,
