--- a/foldl.cabal
+++ b/foldl.cabal
@@ -26,7 +26,8 @@ Library
         primitive                   < 0.6 ,
         text         >= 0.11.2.0 && < 1.2 ,
         transformers >= 0.2.0.0  && < 0.4 ,
-        vector       >= 0.7      && < 0.11
+        vector       >= 0.7      && < 0.11,
+        containers                  < 0.6
     Exposed-Modules:
         Control.Foldl,
         Control.Foldl.ByteString,
