--- a/foldl.cabal
+++ b/foldl.cabal
@@ -24,6 +24,7 @@ Library
         base         >= 4        && < 5   ,
         bytestring   >= 0.9.2.1  && < 0.11,
         primitive                   < 0.6 ,
+        profunctors  >= 4.2      && < 4.3 ,
         text         >= 0.11.2.0 && < 1.2 ,
         transformers >= 0.2.0.0  && < 0.5 ,
         vector       >= 0.7      && < 0.11,
