--- a/foldl.cabal
+++ b/foldl.cabal
@@ -27,8 +27,7 @@ Library
         text         >= 0.11.2.0 && < 1.3 ,
         transformers >= 0.2.0.0  && < 0.5 ,
         vector       >= 0.7      && < 0.11,
-        containers                  < 0.6,
-        dlist        >= 0.7.1    && < 0.8
+        containers                  < 0.6
     Exposed-Modules:
         Control.Foldl,
         Control.Foldl.ByteString,
