--- a/foldl.cabal
+++ b/foldl.cabal
@@ -28,7 +28,8 @@ Library
         text         >= 0.11.2.0 && < 1.3 ,
         transformers >= 0.2.0.0  && < 0.5 ,
         vector       >= 0.7      && < 0.11,
-        containers                  < 0.6
+        containers                  < 0.6,
+        profunctors                 < 5.2
     Exposed-Modules:
         Control.Foldl,
         Control.Foldl.ByteString,
