--- a/foldl.cabal
+++ b/foldl.cabal
@@ -33,6 +33,8 @@ Library
         transformers >= 0.2.0.0  && < 0.6 ,
         vector       >= 0.7      && < 0.13,
         containers                  < 0.6 ,
+        unordered-containers        < 0.3 ,
+        hashable                    < 1.3 ,
         contravariant               < 1.5 ,
         profunctors                 < 5.3 ,
         comonad      >= 4.0      && < 6
