--- a/foldl.cabal
+++ b/foldl.cabal
@@ -37,7 +37,8 @@ Library
         hashable                    < 1.3 ,
         contravariant               < 1.5 ,
         profunctors                 < 5.3 ,
-        comonad      >= 4.0      && < 6
+        comonad      >= 4.0      && < 6   ,
+        vector-builder              < 0.4
     Exposed-Modules:
         Control.Foldl,
         Control.Foldl.ByteString,
