--- a/foldl.cabal
+++ b/foldl.cabal
@@ -36,6 +36,7 @@ Library
         unordered-containers        < 0.3 ,
         hashable                    < 1.3 ,
         contravariant               < 1.5 ,
+        semigroups   >= 0.17     && < 1.19,
         profunctors                 < 5.3 ,
         comonad      >= 4.0      && < 6   ,
         vector-builder              < 0.4
