Add optics and reimplement "either" and "eitherM" thru them

--- a/foldl.cabal
+++ b/foldl.cabal
@@ -45,6 +45,7 @@ Library
         Control.Foldl.ByteString,
         Control.Foldl.Text
     Other-Modules:
+        Control.Foldl.Optics
         Control.Foldl.Internal
     GHC-Options: -O2 -Wall
 
