--- a/foldl.cabal
+++ b/foldl.cabal
@@ -43,7 +43,8 @@ Library
     Exposed-Modules:
         Control.Foldl,
         Control.Foldl.ByteString,
-        Control.Foldl.Text
+        Control.Foldl.Text,
+        Control.Scanl
     Other-Modules:
         Control.Foldl.Internal
     GHC-Options: -O2 -Wall
