--- a/foldl.cabal
+++ b/foldl.cabal
@@ -38,6 +38,7 @@ Library
         contravariant               < 1.5 ,
         semigroups   >= 0.17     && < 1.19,
         profunctors                 < 5.3 ,
+        semigroupoids >= 1.0     && < 5.4 ,
         comonad      >= 4.0      && < 6   ,
         vector-builder              < 0.4
     Exposed-Modules:
