Add exHalt, exHalt_, exSkip, exSkip_

--- a/foldl.cabal
+++ b/foldl.cabal
@@ -39,7 +39,8 @@ Library
         profunctors                 < 5.4 ,
         semigroupoids >= 1.0     && < 5.4 ,
         comonad      >= 4.0      && < 6   ,
-        vector-builder              < 0.4
+        vector-builder              < 0.4 ,
+        safe-exceptions
     Exposed-Modules:
         Control.Foldl,
         Control.Foldl.ByteString,
