--- a/foldl.cabal
+++ b/foldl.cabal
@@ -59,3 +59,12 @@ Benchmark benchmarks
         criterion,
         foldl
     GHC-Options: -O2 -Wall -rtsopts -rtsopts -with-rtsopts=-T
+
+Test-Suite doctest
+    Type: exitcode-stdio-1.0
+    HS-Source-Dirs: test
+    Main-Is: doctest.hs
+    Build-Depends:
+        base,
+        doctest >= 0.16
+    GHC-Options: -threaded
