Reimplement immutable vector fold without builder
Builder provides more features than we need for which we have to pay with performance. In this PR I'm replacing it altogether with a simple and efficient strategy.

The strategy is to build it in two passes:
1. Accumulate a reverse list and its length.
2. Allocate a vector of that length and traverse it in reverse order populating it with elements of the list.

--- a/foldl.cabal
+++ b/foldl.cabal
@@ -37,8 +37,7 @@ Library
         contravariant               < 1.6 ,
         profunctors                 < 5.6 ,
         semigroupoids >= 1.0     && < 5.4 ,
-        comonad      >= 4.0      && < 6   ,
-        vector-builder              < 0.4
+        comonad      >= 4.0      && < 6
     if impl(ghc < 8.0)
         Build-Depends:
             semigroups   >= 0.17 && < 1.20
@@ -50,6 +49,8 @@ Library
     Other-Modules:
         Control.Foldl.Optics
         Control.Foldl.Internal
+        Control.Foldl.Util.Vector
+        Control.Foldl.Util.MVector
     GHC-Options: -O2 -Wall
     Default-Language: Haskell2010
 
