--- a/foldl.cabal
+++ b/foldl.cabal
@@ -54,15 +54,26 @@ Library
     GHC-Options: -O2 -Wall
     Default-Language: Haskell2010
 
-Benchmark benchmarks
+Benchmark Foldl
     Type: exitcode-stdio-1.0
     HS-Source-Dirs: bench
-    Main-Is: benchmarks.hs
+    Main-Is: Foldl.hs
     Build-Depends:
         base,
         criterion,
         foldl
     GHC-Options: -O2 -Wall -rtsopts -rtsopts -with-rtsopts=-T
+    Default-Language: Haskell2010
+
+Benchmark Scanl
+    Type: exitcode-stdio-1.0
+    HS-Source-Dirs: bench
+    Main-Is: Scanl.hs
+    Build-Depends:
+        base,
+        criterion,
+        foldl
+    GHC-Options: -O2 -Wall -rtsopts -with-rtsopts=-T
     Default-Language: Haskell2010
 
 Test-Suite doctest
