--- a/foldl.cabal
+++ b/foldl.cabal
@@ -4,10 +4,10 @@ Cabal-Version: >=1.10
 Build-Type: Simple
 License: BSD3
 License-File: LICENSE
-Copyright: 2013 Gabriel Gonzalez
-Author: Gabriel Gonzalez
-Maintainer: Gabriel439@gmail.com
-Bug-Reports: https://github.com/Gabriel439/Haskell-Foldl-Library/issues
+Copyright: 2013 Gabriella Gonzalez
+Author: Gabriella Gonzalez
+Maintainer: GenuineGabriella@gmail.com
+Bug-Reports: https://github.com/Gabriella439/Haskell-Foldl-Library/issues
 Synopsis: Composable, streaming, and efficient left folds
 Description: This library provides strict left folds that stream in constant
   memory, and you can combine folds using @Applicative@ style to derive new
@@ -19,7 +19,7 @@ Extra-Source-Files:
     README.md
 Source-Repository head
     Type: git
-    Location: https://github.com/Gabriel439/Haskell-Foldl-Library
+    Location: https://github.com/Gabriella439/Haskell-Foldl-Library
 
 Library
     HS-Source-Dirs: src
