--- a/foldl.cabal
+++ b/foldl.cabal
@@ -44,6 +44,7 @@ Library
     Exposed-Modules:
         Control.Foldl,
         Control.Foldl.ByteString,
+        Control.Foldl.NonEmpty
         Control.Foldl.Text,
         Control.Scanl
     Other-Modules:
